Change hompage and main image in index

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <html>
-	<head> Twice Hompage</head>
-	<div> Twice Main Image </div>
+	<head> BTS Hompage</head>
+	<div> BTS Main Image </div>
 	<footer>jyp ent.</footer>
 </html>
