Add Body in index

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <html>
 	<head> BTS Hompage</head>
 	<div> BTS Main Image </div>
+	<body> BTS is Best Group</body>
 	<footer>jyp ent.</footer>
 </html>
