--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <html>
 	<head> Twice Hompage</head>
 	<div> Twice Main Image </div>
+	<body>Twice best music is what is love</body>
 	<footer>jyp ent.</footer>
 </html>
